force-app/main/default/objects/PartManifest__c/PartManifest__c.object-meta.xml
<CustomObject>
    <label>PartManifest</label>
    <nameField>
        <label>PartManifest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PartManifests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>