force-app/main/default/objects/PartManifest__c/fields/CaseNo__c.field-meta.xml
<CustomField>
    <fullName>CaseNo__c</fullName>
    <label>Case No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>