force-app/main/default/objects/PartManifest__c/fields/InvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNo__c</fullName>
    <label>Invoice No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>