force-app/main/default/objects/PartManifest__c/fields/InvoiceSeqNo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSeqNo__c</fullName>
    <label>Invoice Seq No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>