force-app/main/default/objects/PartManifest__c/fields/PackingQty__c.field-meta.xml
<CustomField>
    <fullName>PackingQty__c</fullName>
    <label>Packing Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>