force-app/main/default/objects/PartManifest__c/fields/PartManifest_ID__c.field-meta.xml
<CustomField>
    <fullName>PartManifest_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>PartManifest ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>