force-app/main/default/objects/PartManifest__c/fields/PartsNo__c.field-meta.xml
<CustomField>
    <fullName>PartsNo__c</fullName>
    <label>Parts No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>