force-app/main/default/objects/PartManifest__c/fields/PartsNoOrdered__c.field-meta.xml
<CustomField>
    <fullName>PartsNoOrdered__c</fullName>
    <label>Parts No Ordered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>