force-app/main/default/objects/PartManifest__c/fields/ShipmentNo__c.field-meta.xml
<CustomField>
    <fullName>ShipmentNo__c</fullName>
    <label>Shipment No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>