force-app/main/default/objects/PartManifest__c/fields/ShippedDate__c.field-meta.xml
<CustomField>
    <fullName>ShippedDate__c</fullName>
    <label>Shipped Date</label>
    <type>Date</type>
</CustomField>