force-app/main/default/objects/PartManifest__c/fields/YourOrderNo__c.field-meta.xml
<CustomField>
    <fullName>YourOrderNo__c</fullName>
    <label>Your Order No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>